styles/main.css
/* ... */
body {
	line-height: 1;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

html {
	box-sizing: border-box;
}

*, *::before, *::after {
	box-sizing: inherit;
}


body { 
	font-family: Roboto, Sans-serif; 
	background-color: #D4FABE; /*#ebf3e1; #D4FABE; #f5e34752;*/
	color: #7d6969; /*#716c6c; #7d6969*/
}

p {
	color: black;
}

li {
	color: #5e2121;
}

ul li {
	list-style: none;
}

a {
	text-decoration: none;
}

button {
	cursor: pointer;
}

h1 {
	font-size: 2.2rem;
}
h2 {
	font-size: 1.9rem;
}
h3 {
	font-size: 1.3rem;
}
h4 {
	font-size: 1.2rem;
}
h5 {
	font-size: 1rem;
}

/* HEADER and  NAVBAR */
.header {
	background-color: transparent; /* #1F2937;*/
	display: flex;
	justify-content: space-around;
	align-items: end;
	width: 98%;
	margin: auto;
}

.header__logo {
	background-color: #E99797;
	font-size: 1.2rem;
	margin-left: 3px;
	padding: 18px 2px;
}

.header__navbar {
	display: flex;
	justify-content: space-around;
}

.header__navbar li {
	background-color: #b9afaf; /*#D9D9D9;*/
	font-size: 1.1rem;
	margin-left: 4px;
	padding: 2px 2px 0 2px;
}
.header__navbar li:nth-child(2) {
	background-color: #9290F8;
}
.header__navbar li:nth-child(4) {
	background-color: #F6D493;
	margin-right: 3px;
}

.header__navbar a:hover, .footer__link a:hover {
	color: #3882F6; /*#49a6e9;*/
}


.div-support-top {
	background-color: #b9afaf;
	width: 97%;
	/* max-width: 475px; */
	height: 15px;
	margin: 0px auto 0px;
	border-radius: 5px;
}

.div-ornament-top {
	display: block;
	background-color: #F6D493;
	width: 64%;
	max-width: 221px;
	height: 10px;
	margin: auto;
}

.shelves {
	background-color: white; /*#b9afaf #f3c176;*/
	width: 90%;
	border-radius: 2px;
	margin: auto;
	padding: 4px 0;
}


/* DESCRIPTION PARTITION */
.description-partition, .form-partition {
	background: radial-gradient(#ac7732 5%, #d19341 1%,  #b1762a 1%, #874e03);
	border-radius: 5px;
	margin: auto;
	padding: 16px 0;
}

.description-partition {
	width: 84%;
	min-width: 370px;
	max-width: 370px;
	margin-bottom: 140px;
}

.description-partition__shelf {
	text-align: center;
	border: 2px solid #a18e72;
	border-radius:12px;
	padding: 8px 8px 4px 8px;
}

.description-partition__app-title {
	color: #5e6e5d; /* #5F7E7D;*/
	font-size: 2.2rem;
	padding: 8px;
}
.description-partition__app-title span {
	color: #9290F8;
	font-size: 2.8rem;
	font-weight: bold;
	
}

.description-partition__about-msg {
	line-height: 16px;
	text-align: center;
	/* padding-top: 2px; */
	cursor: pointer;
}

.description-partition__about-msg a {
	color: #9290F8;
}
.description-partition__about-msg a:hover {
	text-shadow: 1px 1px 2px #6b5534; /*#716fe2; #442f08;*/
}

.description-partition__ornament {
	background-color: #EDAEAE;
	height: 10px;
	margin-bottom: 5px;
}


.hero {
	display: none;
}
.hero_image {
	width: 100%; 
	height: 300px;
	display: block;
	margin: 0 auto 0px;
	border-top: 2px solid #a18e72;
}


/* BOOKSHELF PARTITIONS */
.forms-partition {
	background-color: #9290F8; /*#484787; beige; #ebf3e1; #8E001C; #201f61;*/
	/* padding: 60px 0; */
}

/* SEARCH FORM */
.search-form {
	color: #944e4e;
	background-color: #9290F8;
	width: 80%;
	max-width: 420px;
	margin: auto;
	margin-bottom: 100px;
	padding: 15px 20px 20px;
	border-radius: 4px;
}

.search-form__description {
	display: flex;
	justify-content: space-evenly;
	align-items: baseline;
}

.search-form__legend { 
	font-size: 1.5rem;
	font-weight: bold; 
	font-family: "Segoe UI", "Arial", "Times New Roman";
	margin-bottom: 25px; 
	/* text-align: center; */
	text-decoration: underline;
}

.search-form__icon {
	width: 20px;
	height: 20px;
	cursor: pointer;
}

.search-form__label { 
	font-size: 1.1rem;
	font-weight: bold;
}
.search-form__input { 
	background-color: #F6D493; /*rgba(255, 255, 0, 0.8);*/
	width: 80%;
	padding: 4px;
}

.search-form__result {
	color: #767072; /*#944e4e;*/
	text-shadow: 1px 1px 1px #e17070, 3px 3px 3px #e3c9c6, 2.5px 2.5px 2.5px yellow; 
	font-weight: bold;
	margin-top: 5px;
	line-height: 30px;
}


/* MESSAGE BOARD */
.message-board {
	color: #944e4e;
	font-weight: bold;
	background-color: #bec8b2; /*#b5e67c; #CCCACA;*/
	text-align: center;
	width: 330px;
	/* min-height: 170px; */
	margin: auto;
	padding: 20px 12px;
	border-radius: 20px;
	position: relative;
	bottom: 25px;	
	display: none;
  margin-bottom: 30px;
}

.message-board-validation {
	color: #e60a0a;
	font-weight: bold;
	margin-top: 5px;
	line-height: 30px;
}

.message-board-msg {
	color: #767072; /*#6765db #492727; #efb1b1;*/
	text-shadow: 1px 1px 1px #e17070, 3px 3px 3px #e3c9c6, 2.5px 2.5px 2.5px yellow; 
	font-weight: bold;
	margin-top: 5px;
	line-height: 30px;
}


/* FORM PARTITION */
.form-partition {
	width: 96%;
	max-width: 425px;
	/* margin-bottom: 110px; */
}

.form-partition__shelf {
	display: block;
	width: 90%;
	margin: auto;
}

.form-partition__required-field {
	color: #e02525;
}

.form-partition__desc {
	color: #695425;
	text-align: center;
	line-height: 25px;
	margin: 10px 10px 30px;
}

.form-partition__selected {
	color: red;
	text-align: center;
	line-height: 25px;
	margin: 10px 10px 40px;
}

.form-partition__shelf label {
	color: #5e4c4c;
	display: block;
	width: 80%;
	margin: 0 auto;
	text-align: center;
}

.form-partition__shelf input[type="text"] {
	display: block;
	width: 100%;
	margin: 5px 0 20px 0;
}

.form-partition__shelf input[type="number"] {
	width: 25%;
	margin-bottom: 10px;
}

.form-partition__shelf input[type="checkbox"] {
	margin-bottom: 35px;
}

.form-partition__btns {
	display: flex;
	justify-content: center;
	gap: 2px;
	margin: 10px;
}

.form-partition__add, .form-partition__clear, .form-partition__edit {
	border-radius: 10px;
}


/* BOOKLIST PARTITION */
.booklist-partition {
	background-color: #739195; /*#2e2d27; #fff9c9; #F6D493;*/
	overflow: auto;
	
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
}
/* ... */

